# training_Anima_lora

./: .gitattributes  .gitignore  CLAUDE.md  NOTICE  README.md  inference.py  install.bat  install_pip.bat  install_uv.bat  pyproject.toml  requirements.txt  run_gui.bat  run_gui_native.bat  tasks.py  train.py  update.bat
LoraEasyCustomOptimizer/: CosineAnnealingWarmRestarts.py  RexAnnealingWarmRestarts.py  __init__.py  abmog.py  adam.py  adammini.py  adamw_schedulefree_plus.py  adan.py  ademamix.py  alice.py  cascade.py  cstableadamw.py  dehaze.py  farmscrop.py  fcompass.py  fftdescent.py  fira.py  fmarscrop.py  glyph.py  gooddog.py  grokfast.py  lamb.py  laprop.py  lpfadamw.py  moda.py  mythical.py  nor_muon_schedulefree.py  oagopt.py  ocgopt.py  racs.py  radam_schedulefree.py  ranger21.py  rmsprop.py  scgopt.py  schedulefree.py  scion.py  scorn.py  sgd.py  shampoo.py  shampoo_utils.py  (+6 more)
anima_lora/: __init__.py
configs/: base.toml  preprocess.toml
custom_nodes/comfyui-anima-trainer/: README.md  node_defaults.toml  nodes.py  pyproject.toml
custom_nodes/comfyui-anima-trainer/_vendor/: __init__.py
dataset_tags/: README.md  characters.txt  qwen_caption.toml  series.txt
docs/: gui_greying.md
finetune/: __init__.py
gui/: __init__.py  backend.py
networks/: CLAUDE.md  __init__.py  lycoris_anima.py
scripts/: edit.py  sync_vendor.py
tests/: test_config_io.py  test_dataset_keys.py  test_freefit_bucket.py  test_image_dupes.py  test_is_val_subset.py  test_mcp_data.py  test_qwen_caption.py  test_runtime_lr.py  test_tag_sort.py  test_tag_stats.py  (+1 more)
(+80 files in other folders)
