[project]
name = "comfyui-animalora-trainer"
description = "Simplified ComfyUI node that trains an Anima LoRA in a direct subprocess and returns a ready-to-use MODEL."
version = "0.1.0"
license = { file = "LICENSE" }
dependencies = []

[project.urls]
Repository = "https://github.com/sorryhyun/anima_lora"

[tool.comfy]
PublisherId = "sorryhyun"
DisplayName = "Anima Adapter Loader"
Icon = ""
